Adding dummy image

--- a/minimal/Dockerfile
+++ b/minimal/Dockerfile
@@ -4,7 +4,7 @@ FROM ${BASE_IMAGE}
 USER root
 
 ARG SETUP
-COPY install/${SETUP}.sh /install.sh
+COPY ${SETUP}.sh /install.sh
 RUN bash /install.sh && rm -f /install.sh
 
 USER user
